--- a/app/assets/stylesheets/phrasing.css.scss
+++ b/app/assets/stylesheets/phrasing.css.scss
@@ -10,12 +10,12 @@
 
 .phrasable_on{
 	border-bottom: 1px dashed black;
-	
+
 	a{
   	pointer-events: none;
    	cursor: default;
 	}
-	
+
 	&:focus{
 		outline: none;
 	}
@@ -161,6 +161,9 @@ span.no-overflow {
 	-o-transition: all 300ms ease-in-out;
 	transition: all 300ms ease-in-out;
 
+  .url-input {
+    color: black;
+  }
 
 	&.url-mode {
 		width: 275px;
@@ -172,7 +175,7 @@ span.no-overflow {
 			margin-right: 0px;
 			opacity: 0;
 		}
-		
+
 		input{
 			border-left: 2px solid transparent;
 			padding-right: 5px;
